# blutter

./: .gitignore  CLAUDE.md  README.md  blutter.py  dartvm_fetch_build.py  extract_dart_info.py  macho_info.py  plan.md  pyproject.toml
.github/workflows/: ci.yml
blutter/: sourcelist.cmake
blutter/src/: CodeAnalyzer_arm64.cpp  DartApp.cpp  DartApp.h  DartDumper.cpp  DartDumper.h  DartFunction.h  Disassembler_arm64.h  DwarfWriter.cpp  DwarfWriter.h  ElfHelper.cpp  FridaWriter.cpp  MachOHelper.cpp  MachOHelper.h  main.cpp
docs/: json-schema.md
scripts/: CMakeLists.txt  deobfuscate.py  extract_libflutter_functions.py  frida.template.js  init_env_win.py
tests/: conftest.py  elf_fixture.py  macho_fixture.py  test_blutter_input.py  test_dart_lib_info.py  test_extract_dart_info.py  test_extract_dart_info_macho.py  test_find_compat_macro.py  test_ipa_extraction.py  test_macho_info.py  test_version_tuple.py
tests/cpp/: CMakeLists.txt  macho_fixture.h  test_macho_parser.cpp
